--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.9",
+    "expo-image-picker": "~17.0.8",
     "expo-router": "^6.0.7",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "0.81.4",
+    "expo-document-picker": "~14.0.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.73.0",
     "typescript": "~5.9.2"
   },
   "private": true
