--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "expo": "~54.0.9",
+    "expo": "~54.0.10",
+    "expo-document-picker": "~14.0.7",
     "expo-image-picker": "~17.0.8",
-    "expo-router": "^6.0.7",
+    "expo-router": "~6.0.8",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-native": "0.81.4",
-    "expo-document-picker": "~14.0.7"
+    "react-native": "0.81.4"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
