--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-document-picker": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-router": "~6.0.8",
+    "expo-sharing": "~14.0.7",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
